Fix spacing footer - horizontal

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -9,11 +9,12 @@
         
         @include breakpoint-up(large) {
             display: grid;
-            grid-template-columns: repeat(3, 1fr) 2fr;
+            grid-template-columns: 2fr 1fr 1fr 3fr;
             grid-template-rows: 1fr auto;
             grid-template-areas: 
                 'logo links1 links2 cta'
                 'social links1 links2 copyright';
+            gap: 1rem;
             justify-items: start;
         }
     }
