--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -637,11 +637,12 @@ button:hover, .button:hover {
   .footer .container {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[3] 2fr;
-        grid-template-columns: repeat(3, 1fr) 2fr;
+    -ms-grid-columns: 2fr 1fr 1fr 3fr;
+        grid-template-columns: 2fr 1fr 1fr 3fr;
     -ms-grid-rows: 1fr auto;
         grid-template-rows: 1fr auto;
         grid-template-areas: 'logo links1 links2 cta' 'social links1 links2 copyright';
+    gap: 1rem;
     justify-items: start;
   }
 }
